Changes in 0.61.4:
  * %(datadir)s/.../lib/ files will no longer show up in :lib - presumption
    being that anything under %(datadir)s really is arch independenct
  * Creating branches and shadows had a command line parsing bug

Changes in 0.61.3:
  * Corrected a bug that snuck in 0.61.2 that caused a temporary SQL table
    to not be temporary, which makes multiple httpd processes fail with
    'database schema changed' errors.

Changes in 0.61.2:
  * Fix a bunch of typos in the authentication checking server side
  * Add permission editing capabilities to the server component and hooks
    in the netclient
  * Overhaul of ACL system so that uniqueness constraints on Troves and 
    Labels can be enforced: we now use a special Trove and Label "0 | ALL"
    instead of Null
  * Dependency resolution enforces label ACLs.
  * Module arguments to commitaction are parsed according to shell
    quoting rules.
  * The changemail commitaction module now takes an optional '--from'
    argument.
  * added clearBuildReqs() - will clear all or some of superclass buildreqs
    when cooking.
  * The pickled version of Dependency objects changed, therefore the
    schema version of the changeset cache has been incremented.
  * When Configure() detects a failure and input or output is not a
    tty, all config.log files will be included in the output in order
    to ease debugging from captured log files.
  * Part of the infrastructure for adding users and groups has been added:
    it is possible to create info-<name>:{user,group} packages via
    UserInfoRecipe and GroupInfoRecipe classes.  The User(), Group(),
    and SupplementalGroup() policies are deprecated; those lines should
    move to their own recipes intact (the syntax remains the same).
    The install-time code does not yet install info-* packages first in
    their own transaction; when it does, the Ownership(), UtilizeUser(),
    and UtilizeGroup() policies will create dependencies on the